[gd_scene load_steps=14 format=3 uid="uid://dk177wrqsnup6"]

[ext_resource type="Script" uid="uid://ca6yohoun3mso" path="res://elements/player/projectiles/tap_red/proj_tap_red.gd" id="1_s7o25"]
[ext_resource type="PackedScene" uid="uid://kblx7f3qtt0w" path="res://elements/player/projectiles/tap_red/mesh/mesh_tap_red.tscn" id="2_ynxd5"]
[ext_resource type="Script" uid="uid://cccnp54xda20b" path="res://elements/enemy/constant_rotation.gd" id="3_rkvex"]
[ext_resource type="Script" uid="uid://d2rhxuigqg21b" path="res://systems/audio_wwise/AkEvent3DLoop.gd" id="4_2h52g"]
[ext_resource type="Script" uid="uid://cr5xxhd04vkgu" path="res://addons/gap/api/accessibility_high_contrast_object.gd" id="4_ksull"]
[ext_resource type="WwiseEvent" uid="uid://nat3jb8s50g" path="res://Wwise/resources/Event/{34F1944B-FFAC-4DC1-918D-01289463FFBF}.tres" id="5_ksull"]
[ext_resource type="WwiseEvent" uid="uid://c0cau4e3re0hg" path="res://Wwise/resources/Event/{197D4526-35B7-463B-853E-612CA0703E4A}.tres" id="6_tt8v2"]

[sub_resource type="Animation" id="Animation_r1ois"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:angleVelocity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qbnkq"]
resource_name = "anim_tap_red"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:angleVelocity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333, 0.4, 1),
"transitions": PackedFloat32Array(1, -2, 0.5, -2),
"update": 0,
"values": [0.0, -60.0, -70.0, -15.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y0hlq"]
_data = {
&"RESET": SubResource("Animation_r1ois"),
&"anim_tap_red": SubResource("Animation_qbnkq")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rxc7q"]
albedo_color = Color(0.901961, 0.858824, 0, 1)
emission_enabled = true
emission = Color(0.827451, 0.12549, 0.286275, 1)
emission_energy_multiplier = 4.0

[sub_resource type="SphereMesh" id="SphereMesh_aldmk"]
material = SubResource("StandardMaterial3D_rxc7q")
radial_segments = 12
rings = 6

[sub_resource type="SphereShape3D" id="SphereShape3D_5igb0"]

[node name="ProjTapRedBomb" type="Node3D"]
script = ExtResource("1_s7o25")
velocity_none_scale = Vector3(0.8, 1.4, 0.8)
velocity_high_scale = Vector3(1.05, 0.85, 1.5)

[node name="Scaler" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1.2, 0, 0, 0)

[node name="tap_red" parent="Scaler" instance=ExtResource("2_ynxd5")]
script = ExtResource("3_rkvex")
axis = Vector3(1, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Scaler/tap_red"]
libraries = {
&"": SubResource("AnimationLibrary_y0hlq")
}
autoplay = "anim_tap_red"

[node name="AccessibilityHighContrastObject" type="Node" parent="Scaler/tap_red"]
script = ExtResource("4_ksull")
high_contrast_group = &"player"
metadata/_custom_type_script = "uid://cr5xxhd04vkgu"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_aldmk")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_5igb0")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[node name="SFX Loop" type="Node3D" parent="." node_paths=PackedStringArray("loop_begin_event", "loop_finish_event")]
script = ExtResource("4_2h52g")
_start_loop_on = 2
_stop_loop_on = 3
loop_begin_event = NodePath("Begin")
loop_finish_event = NodePath("End")

[node name="Begin" type="AkEvent3D" parent="SFX Loop"]
event = ExtResource("5_ksull")

[node name="End" type="AkEvent3D" parent="SFX Loop"]
event = ExtResource("6_tt8v2")

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_shape_entered" from="Area3D" to="." method="_on_area_3d_body_shape_entered"]
